resultat finale de projet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rent me now | for rent cars-moto-compact-camion-berline</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pictures">
 </head>
@@ -37,8 +37,8 @@
         <br> price And a longer period for your comfort and the comfort of your family</p>
         </div>
         <div class="btn-flex">
-          <a class="btn" href="">Get started</a>
-          <a class="btn" href="">Reserve now</a>
+          <a class="btn" href="contact.html">Get started</a>
+          <a class="btn" href="reserve.html">Reserve now</a>
         </div>
       </div>
   </div>
@@ -164,7 +164,7 @@
 <aside class="bg-primary ">
   <div class="d-flex ">
       <div class="delivered">
-          <div class="frp">New products, delivered to you.</div>
+          <div class="frp">New offres, delivered to you.</div>
           <div class="scp">Sign up for our newsletter for the latest updates.</div>
           <br>
       </div>
