--- a/reserve.html
+++ b/reserve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>reserve your car now</title>
     <link rel="stylesheet" href="reserve.css">
 </head>
 <body>
@@ -110,6 +110,16 @@
 				</form>
 	
 			</div>
+			<div class="footer">
+				<div>
+				 Copyright &copy; Your Website 2021
+				</div>
+				<div>
+				 <a class="footer-a" href="#!">Privacy</a>
+				 <a class="footer-a" href="#!">Terms</a>
+				 <a class="footer-a" href="#!">Contact</a>
+				</div>
+			   </div>
 	
 	
 	
