--- a/reserve.html
+++ b/reserve.html
@@ -46,15 +46,15 @@
 	
 					<div class="tranmission">
 						<h2>Transmission</h2>
-						<div class="contenu">
-							<div>
+						<div class="contenu" id="trans">
+							<!-- <div>
 								<input type="radio" id="Manual" name="transmission">
 								<label class="Manual" for="Manual">Manual</label><br>
 							</div>
-							<div>
+							<div id="trans">
 								<input type="radio" id="Automatique" name="transmission">
 								<label class="Automatique" for="Automatique">Automatique</label><br>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				 </div>
@@ -88,7 +88,7 @@
 						<h2>Days :</h2>
 						<div class="day">
 							<input type="number" min="1" id="days">
-							<button class="btn">Submit</button>
+							<button class="btn">calc now</button>
 						</div>
 					</div>
 	
